--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "dist": "rollup -c",
+    "doc": "typedoc --mode modules --out ./doc ./src/ --ignoreCompilerErrors",
+    "dist": "npm run lint && npm run doc && rollup -c",
+    "lint": "tslint 'src/**/*.ts?(x)' -p tsconfig.json -c tslint.json",
     "test": "karma start"
   },
   "repository": {
@@ -40,6 +42,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-typescript2": "^0.5.2",
     "rollup-plugin-uglify": "^2.0.1",
-    "tslint": "^5.7.0"
+    "tslint": "^5.7.0",
+    "typedoc": "^0.9.0"
   }
 }
