rename doc -> docs [ci skip]

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "doc": "typedoc --mode modules --out ./doc ./src/ --ignoreCompilerErrors",
-    "dist": "npm run lint && npm run doc && rollup -c",
+    "docs": "typedoc --mode modules --out ./docs ./src/ --ignoreCompilerErrors",
+    "dist": "npm run lint && npm run docs && rollup -c",
     "lint": "tslint 'src/**/*.ts?(x)' -p tsconfig.json -c tslint.json",
     "test": "karma start"
   },
