--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coveralls": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-typescript": "^3.0.7",
