--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "docs": "typedoc --mode modules --out ./docs ./src/ --ignoreCompilerErrors",
+    "docs": "typedoc --mode modules --out ./docs ./src/ --ignoreCompilerErrors && touch ./docs/.nojekyll",
     "dist": "npm run lint && npm run docs && rollup -c",
     "lint": "tslint 'src/**/*.ts?(x)' -p tsconfig.json -c tslint.json",
     "test": "karma start"
