--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coveralls": "^1.1.2",
+    "karma-jquery": "^0.2.2",
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-typescript": "^3.0.7",
