--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "rollup-plugin-multi-entry": "^2.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-typescript2": "^0.5.2",
+    "rollup-plugin-typescript2": "^0.12.0",
     "rollup-plugin-uglify": "^2.0.1",
     "tslint": "^5.7.0",
-    "typedoc": "^0.9.0"
+    "typedoc": "^0.9.0",
+    "typescript": "^2.7.2"
   }
 }
