--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "noru-utils",
-  "version": "0.1.34",
+  "version": "0.2.0",
   "description": "",
   "main": "src/index.ts",
   "types": "src/index.ts",
@@ -26,28 +26,31 @@
   "homepage": "https://github.com/noru/utils#readme",
   "devDependencies": {
     "@types/chai": "^4.0.4",
+    "@types/jquery": "^3.3.29",
     "@types/mocha": "^2.2.42",
     "@types/node": "^8.0.28",
+    "@types/sinon": "^7.0.8",
     "chai": "^4.1.2",
-    "coffee-script": "^1.12.7",
-    "karma": "^1.7.1",
+    "karma": "^4.0.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coveralls": "^1.1.2",
     "karma-jquery": "^0.2.2",
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
-    "karma-typescript": "^3.0.8",
+    "karma-sinon": "^1.0.5",
+    "karma-typescript": "^3.0.13",
     "mocha": "^3.5.0",
     "rollup": "^0.52.0",
+    "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-multi-entry": "^2.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-typescript2": "^0.12.0",
-    "rollup-plugin-uglify": "^2.0.1",
+    "sinon": "^7.2.5",
     "tslint": "^5.7.0",
     "typedoc": "^0.14.0",
-    "typescript": "^2.7.2"
+    "typescript": "^3.3.3333"
   }
 }
