--- a/package.json
+++ b/package.json
@@ -24,33 +24,36 @@
     "url": "https://github.com/noru/utils/issues"
   },
   "homepage": "https://github.com/noru/utils#readme",
+  "peerDependencies": {
+    "react": "^16.8.0"
+  },
   "devDependencies": {
-    "@types/chai": "^4.0.4",
+    "@types/chai": "^4.1.7",
     "@types/jquery": "^3.3.29",
-    "@types/mocha": "^2.2.42",
-    "@types/node": "^8.0.28",
-    "@types/sinon": "^7.0.8",
-    "chai": "^4.1.2",
-    "karma": "^4.0.0",
+    "@types/mocha": "^2.2.48",
+    "@types/node": "^8.10.49",
+    "@types/sinon": "^7.0.12",
+    "chai": "^4.2.0",
+    "karma": "^4.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coveralls": "^1.1.2",
-    "karma-jquery": "^0.2.2",
+    "karma-coveralls": "^2.1.0",
+    "karma-jquery": "^0.2.4",
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-sinon": "^1.0.5",
-    "karma-typescript": "^3.0.13",
-    "mocha": "^3.5.0",
-    "rollup": "^0.52.0",
+    "karma-typescript": "^4.1.0",
+    "mocha": "^6.1.4",
+    "rollup": "^0.52.3",
     "rollup-plugin-cleanup": "^3.1.1",
-    "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-multi-entry": "^2.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-commonjs": "^8.4.1",
+    "rollup-plugin-multi-entry": "^2.1.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-typescript2": "^0.12.0",
-    "sinon": "^7.2.5",
-    "tslint": "^5.7.0",
-    "typedoc": "^0.14.0",
-    "typescript": "^3.3.3333"
+    "sinon": "^7.3.2",
+    "tslint": "^5.17.0",
+    "typedoc": "^0.14.2",
+    "typescript": "^3.5.1"
   }
 }
