--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
   },
   "homepage": "https://github.com/noru/utils#readme",
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/jquery": "^3.3.29",
     "@types/mocha": "^2.2.48",
     "@types/node": "^8.10.49",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "@types/sinon": "^7.0.12",
     "chai": "^4.2.0",
     "karma": "^4.1.0",
@@ -44,6 +47,8 @@
     "karma-sinon": "^1.0.5",
     "karma-typescript": "^4.1.0",
     "mocha": "^6.1.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "rollup": "^0.52.3",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-commonjs": "^8.4.1",
