--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "tslint": "^5.17.0",
     "typedoc": "^0.15.0",
     "typescript": "^3.5.1"
+  }, 
+  "publishConfig": {
+    "access": "public"
   }
 }
