--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
-    "module": "ESNext" /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-    "lib": [
-      "es6",
-      "es2015",
-      "es2016",
-      "es2017",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ],
-    "jsx": "preserve" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
-    "importHelpers": true /* Import emit helpers from 'tslib'. */,
-    "strict": true /* Enable all strict type-checking options. */,
-    "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
-    "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-    "types": ["mocha", "chai", "jquery", "sinon"], /* Type declaration files to be included in compilation. */
-    "allowSyntheticDefaultImports": true  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
-
+    "target": "es6",
+    "module": "ESNext",
+    "lib": ["es6", "es2015", "es2016", "es2017", "dom", "dom.iterable", "scripthost"],
+    "jsx": "preserve",
+    "importHelpers": true,
+    "strict": true,
+    "noImplicitAny": false,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["node_modules", "dist", "lib", "docs", "test"]
 }
