--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "karma-sinon": "^1.0.5",
     "karma-typescript": "^4.1.0",
     "mocha": "^6.1.4",
-    "rollup": "^0.52.3",
+    "rollup": "^1.21.2",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-commonjs": "^8.4.1",
     "rollup-plugin-multi-entry": "^2.1.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-typescript2": "^0.12.0",
+    "rollup-plugin-typescript2": "^0.24.1",
+    "rollup-plugin-uglify": "^6.0.3",
     "sinon": "^7.3.2",
     "tslint": "^5.17.0",
     "typedoc": "^0.15.0",
