--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
   },
-  "exclude": ["node_modules", "dist", "lib", "docs", "test"]
+  "exclude": ["node_modules", "dist", "lib", "docs"]
 }
