--- a/package.json
+++ b/package.json
@@ -42,15 +42,16 @@
     "karma-sinon": "^1.0.5",
     "karma-typescript": "^4.1.0",
     "mocha": "^6.1.4",
-    "rollup": "^1.21.2",
+    "rollup": "^2.56.3",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-commonjs": "^8.4.1",
     "rollup-plugin-multi-entry": "^2.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-typescript2": "^0.24.1",
+    "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-uglify": "^6.0.4",
     "sinon": "^7.3.2",
+    "tslib": "^2.3.1",
     "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
   },
